# routes/temple.js
@@ -5,8 +5,9 @@ const temples = require('../controllers/temples');
 
 // /temples base path is in routes/routes.js
 
-router.get('/', checkKey, temples.getAllTemples);
-router.get('/:temple_id', checkKey, temples.getTempleById);
-router.post('/', checkKey, temples.createTemple);
+router.get('/', (req, res, next) => { /* #swagger.ignore = true */ next(); }, checkKey, temples.getAllTemples);
+router.get('/:temple_id', (req, res, next) => { /* #swagger.ignore = true */ next(); }, checkKey, temples.getTempleById);
+router.post('/', (req, res, next) => { /* #swagger.ignore = true */ next(); }, checkKey, temples.createTemple);
+
 
 module.exports = router;
